bio page getComments using api done

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,9 +1,11 @@
-@use './variables' as *;
-@use './mixins' as *;
-@use './typography' as *;
+@use "./variables" as *;
+@use "./mixins" as *;
+@use "./typography" as *;
 
 * {
   box-sizing: border-box;
+  font-family: $font-stack;
+  margin: 0;
 }
 .header {
   display: flex;
@@ -11,18 +13,19 @@
   align-items: center;
   background-color: $BandSite-Black;
   width: 100%;
-  gap: .125rem;
-  padding: .625rem;
+  padding: 10px 10px 0;
 
   @include tablet {
     flex-direction: row;
-    padding: 2rem 2rem;
-    gap: 12.5rem;
+    padding: 32px 22px;
+    align-items: center;
+    gap: 1.875rem;
+    justify-content: flex-start;
   }
 
   @include desktop {
-    padding: 1rem 10rem;
-    gap: 12.5rem;
+    padding: 16px 160px;
+    gap: 200px;
   }
 
   &__logo {
@@ -41,25 +44,29 @@
       padding: 0;
       gap: 6.25rem;
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
+      width: 100%;
+
+      @include tablet {
+        gap: 0;
+      }
     }
 
     &-item {
-      position: relative;
+      flex: 1;
       text-align: center;
-
-      &--active .header__nav-link {
-        font-weight: 700;
-        color: $white;
+      padding: 0.75rem;
+      &--active {
+        border-bottom: 0.1875rem solid white;
       }
     }
 
     &-link {
       text-decoration: none;
       color: $Mercury;
-      font-size: .875rem;
+      font-size: 0.875rem;
       font-weight: 400;
-      padding: .625rem 0;
+      padding: 0.5rem;
       display: block;
       font-family: $font-stack;
       position: relative;
@@ -69,23 +76,22 @@
         font-weight: 700;
       }
 
-      &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -0.125rem;
-        width: min(100%, 1fr);
-        height: .125rem;
-        background-color: $white;
-        transition: width 0.3s ease-in-out;
-      }
-
-      &:hover::after {
-        width: 100%;
-      }
+      // &::after {
+      //   content: "";
+      //   position: absolute;
+      //   left: 0;
+      //   bottom: -0.125rem;
+      //   width: 0;
+      //   height: 0.125rem;
+      //   background-color: $white;
+      //   transition: width 0.3s ease-in-out;
+      // }
+      // &:hover::after {
+      //   width: 100%;
+      // }
 
       @include tablet {
-        font-size: 1rem;
+        font-size: 16px;
         font-weight: 700;
       }
     }
@@ -93,11 +99,11 @@
 }
 
 .footer {
-  background-color:$BandSite-Black;
+  background-color: $BandSite-Black;
   color: $white;
   text-align: left;
   padding: 1.25rem;
-  font-family: 'Nunito';
+  font-family: "Nunito";
 
   @include tablet {
     align-items: center;
@@ -113,7 +119,7 @@
     line-height: 32px;
     font-weight: 400;
     margin-bottom: 1.25rem;
-    font-family: 'Nunito';
+    font-family: "Nunito";
 
     @include tablet {
       font-size: 36px;
@@ -147,7 +153,7 @@
     p:nth-child(3),
     p:nth-child(6),
     p:nth-child(9) {
-      margin-top: .625rem;
+      margin-top: 0.625rem;
       margin-bottom: 1.25rem;
     }
 
@@ -193,7 +199,7 @@
   &__bottom-container {
     display: flex;
     flex-direction: column;
-    justify-content:end;
+    justify-content: end;
 
     @include desktop {
       flex-direction: column;
@@ -228,7 +234,7 @@
   &__address-heading {
     font-size: 14px;
     font-weight: 500;
-    font-family: 'Nunito';
+    font-family: "Nunito";
 
     @include tablet {
       font-size: 24px;
@@ -237,16 +243,16 @@
 
   &__address-email {
     font-size: 14px;
-    font-family: 'Nunito';
+    font-family: "Nunito";
     font-weight: 400;
   }
 
   &__copyright {
-    margin-top: .625rem;
+    margin-top: 0.625rem;
 
     font-size: 13px;
     font-weight: 400;
-    font-family: 'Nunito';
+    font-family: "Nunito";
 
     @include tablet {
       font-size: 14px;
