--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,193 +1,184 @@
-@use 'partials/variables' as *;
-@use 'partials/mixins' as *;
-@use 'partials/global' as *;
-@use 'partials/typography' as *;
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Nunito', sans-serif;
-}
+@use "partials/variables" as *;
+@use "partials/mixins" as *;
+@use "partials/global" as *;
+@use "partials/typography" as *;
+
 .hero {
-    position: relative;
-    width: 100%;
-    height: auto;
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  padding: 40px;
+  color: $white;
+  overflow: hidden;
+  .title-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: left;
-    padding: 40px;
-    color:$white;
-    overflow: hidden;
-.title-container{
-display: flex;
-flex-direction: column;
-align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+  &__image-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    @include tablet {
+      height: 52.25rem;
+    }
+    @include desktop {
+      height: 56.26rem;
+    }
 
-width: 100%;
-
-}
-    &__image-wrapper {
+    &::before {
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
-      display: flex;
-      @include tablet{
-        height: 52.25rem;
-      }
-      @include desktop{
-        height: 56.26rem;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: $BandSite-Black;
-        opacity: 0.5;
-        z-index: 1;
-      }
-    }
-
-    &__image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    &__content {
-      max-width: 53.125rem;
-      width: 100%;
-      position: relative;
-      z-index: 2;
-      display: block;
-    }
-
-    &__title {
-      font-size: 1.5rem;
-      font-weight: bold;
-      @include tablet{
-        font-size: 3.75rem;
-      }
-      @include desktop{
-        font-size: 3.75rem;
-      }
-    }
-
-    &__subtitle {
-      font-size: 36px;
-      font-weight: bold;
-    }
-
-    &__music {
-      width: 100%;
-      max-width: 50rem;
-      border-radius: .625rem;
-      display: block;
-      margin-top: 1.25rem;
+      background-color: $BandSite-Black;
+      opacity: 0.5;
+      z-index: 1;
     }
   }
-  .shows {
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  &__content {
+    max-width: 53.125rem;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    display: block;
+  }
+
+  &__title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    @include tablet {
+      font-size: 3.75rem;
+    }
+    @include desktop {
+      font-size: 3.75rem;
+    }
+  }
+
+  &__subtitle {
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  &__music {
+    width: 100%;
+    max-width: 50rem;
+    border-radius: 0.625rem;
+    display: block;
+    margin-top: 1.25rem;
+  }
+}
+.shows {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.25rem;
+  width: 100%;
+
+  &__table {
+    width: 100%;
+    max-width: 53.125rem;
+  }
+
+  &__title {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 1.25rem;
+  }
+
+  &__header {
+    display: flex;
+    color: $silver;
+    font-weight: 400;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    text-transform: uppercase;
+
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 0;
+      border-bottom: 2px solid $Mercury;
+    }
+  }
+
+  &__header-item {
+    flex: 1;
+    text-align: left;
+  }
+
+  &__list {
     display: flex;
     flex-direction: column;
+    width: 100%;
+  }
+
+  &__row {
+    display: flex;
+    padding: 1rem 0;
+    border-bottom: 1px solid $Mercury;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    padding: 1.25rem;
+    @include tablet {
+      &:hover {
+        background-color: $Alabaster;
+      }
+    }
+  }
+
+  &__details {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+  &__info {
+    flex: 1;
+    text-align: left;
+    font-weight: 600;
+    min-width: 6rem;
+  }
+
+  &__button {
+    flex: 0.5;
+    background-color: $BandSite-Black;
+    color: white;
+    border: none;
+    padding: 0.625rem 0.9375rem;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    flex-shrink: 0;
     width: 100%;
 
-    &__table {
-        width: 100%;
-        max-width: 53.125rem;
+    &:hover {
+      background-color: darken($BandSite-Black, 10%);
     }
-
-    &__title {
-        text-align: center;
-        font-size: 1.5rem;
-        margin-bottom: 1.25rem;
-    }
-
-    &__header {
-        display: flex;
-        color: $silver;
-        font-weight: 400;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        text-transform: uppercase;
-
-
-        @include tablet {
-            display: flex;
-            justify-content: space-between;
-            padding: 1rem 0;
-            border-bottom: 2px solid $Mercury;
-        }
-    }
-
-    &__header-item {
-        flex: 1;
-        text-align: left;
-    }
-
-    &__list {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    &__row {
-        display: flex;
-        padding: 1rem 0;
-        border-bottom: 1px solid $Mercury;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        @include tablet {
-            &:hover {
-                background-color: $Alabaster;
-            }
-        }
-    }
-
-    &__details {
-        display: flex;
-        flex: 1;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 1rem;
-    }
-
-    &__info {
-        flex: 1;
-        text-align: left;
-        font-weight: 600;
-        min-width: 6rem;
-    }
-
-    &__button {
- flex:.5;
-        background-color: $BandSite-Black;
-        color: white;
-        border: none;
-        padding: 0.625rem 0.9375rem;
-        font-weight: bold;
-        cursor: pointer;
-        text-align: center;
-        border-radius: 4px;
-        transition: background-color 0.3s ease;
-        flex-shrink: 0;
-        width: 100%;
-
-
-        &:hover {
-            background-color: darken($BandSite-Black, 10%);
-        }
-    }
+  }
 }
