--- a/styles/shows.css
+++ b/styles/shows.css
@@ -19,6 +19,11 @@
   margin: 0;
 }
 
+textarea:invalid,
+input:invalid {
+  outline-color: red;
+}
+
 .header {
   display: flex;
   flex-direction: column;
