--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -29,14 +29,17 @@ input:invalid {
   }
 
   @include desktop {
-    padding: 16px 160px;
-    gap: 200px;
+    padding: 1rem 10rem;
+    gap: 12.5rem;
   }
 
   &__logo {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 1.25rem;
+    height: 1.25rem;
+    width: 7.5rem;
   }
 
   &__nav {
@@ -62,7 +65,7 @@ input:invalid {
       text-align: center;
       padding: 0.75rem;
       &--active {
-        border-bottom: 0.1875rem solid white;
+        border-bottom: 0.28rem solid white;
       }
     }
 
@@ -80,20 +83,6 @@ input:invalid {
         color: $white;
         font-weight: 700;
       }
-
-      // &::after {
-      //   content: "";
-      //   position: absolute;
-      //   left: 0;
-      //   bottom: -0.125rem;
-      //   width: 0;
-      //   height: 0.125rem;
-      //   background-color: $white;
-      //   transition: width 0.3s ease-in-out;
-      // }
-      // &:hover::after {
-      //   width: 100%;
-      // }
 
       @include tablet {
         font-size: 16px;
