--- a/styles/shows.css
+++ b/styles/shows.css
@@ -43,14 +43,17 @@ input:invalid {
 }
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 16px 160px;
-    gap: 200px;
+    padding: 1rem 10rem;
+    gap: 12.5rem;
   }
 }
 .header__logo {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin-top: 1.25rem;
+  height: 1.25rem;
+  width: 7.5rem;
 }
 .header__nav {
   width: 100%;
@@ -76,7 +79,7 @@ input:invalid {
   padding: 0.75rem;
 }
 .header__nav-item--active {
-  border-bottom: 0.1875rem solid white;
+  border-bottom: 0.28rem solid white;
 }
 .header__nav-link {
   text-decoration: none;
