--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -64,19 +64,27 @@
   }
 
   &__title {
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
     @include tablet {
-      font-size: 3.75rem;
+      font-size: 1.5rem;
     }
     @include desktop {
-      font-size: 3.75rem;
+      font-size: 1.5rem;
     }
   }
 
   &__subtitle {
-    font-size: 36px;
+    font-size: 1.5rem;
     font-weight: bold;
+    line-height: 2rem;
+    font-weight: 700;
+    @include desktop {
+      font-size: 3.75rem;
+      line-height: 4.25rem;
+      font-weight: 700;
+    }
   }
 
   &__music {
@@ -90,7 +98,7 @@
 .shows {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   padding: 1.25rem;
   width: 100%;
 
@@ -100,7 +108,7 @@
   }
 
   &__title {
-    text-align: center;
+    text-align: left;
     font-size: 1.5rem;
     margin-bottom: 1.25rem;
   }
